--- a/frontend/package.json
+++ b/frontend/package.json
@@ -16,6 +16,7 @@
     "socket.io-client": "^4.8.0"
   },
   "devDependencies": {
+    "@vitejs/plugin-react": "^4.0.0",
     "vite": "^5.0.0"
   }
 }
